fixed overlapping

--- a/style.css
+++ b/style.css
@@ -9,29 +9,6 @@ a {
   text-decoration: none;
 }
 
-::-webkit-scrollbar{
-
-  width: 10px;
-
-}
-
-::-webkit-scrollbar-thumb{
-
-  background-color: #3fbcc0;
-  border-radius: 10px;
-}
-
-::-webkit-scrollbar-thumb:hover{
-
-  background-color:#005253;
-  border-radius: 10px;
-}
-
-::-webkit-scrollbar-track{
-
-  background-color:#011212;
-}
-
 a:hover {
   color: #55a5ea;
   text-decoration: none;
@@ -1852,9 +1829,8 @@ footer {
 
 .social-links {
   display: inline-flex;
-  gap: 1rem;
+  gap: 0.5rem;
   align-items: center;
-  margin-left: -100px;
   
 }
 
@@ -1915,50 +1891,3 @@ footer {
   background: #55a5ea;
   border-color: #3fbbc0;
 }
-.social-links i{
-  font-size: 1.5rem
-  }
-  #ss{
-      font-size: 1.3rem;
-  }
-.social-links #insta:hover {
- /* Add the white background */
-background: white;
-
-/* Gradient background for text */
-background-image: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%);
-background-size: 100%;
-
-/* Use the text as a mask for the background */
--webkit-background-clip: text;
--webkit-text-fill-color: transparent; 
--moz-background-clip: text;
--moz-text-fill-color: transparent;
-}
-.social-links #twit a:hover{
-  color: #000;
-}
-.social-links #git a:hover{
-  color: black;
-}
-.social-links #git:hover{
-  background-color: white;
-  border-radius: 50%;
-}
-.social-links #linkd a:hover{
-  color: #0077b5;
-}
-.social-links #fb a:hover{
-  color: #1877f2;
-}
-.social-links #linkd a:hover{
-  color: #0077b5;
-}
-.social-links #phn a:hover{
-  color: red;
-}
-.social-links #mail1 a:hover{
-  color: #bd4b39;
-}
-
-
